--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,10 +1,9 @@
 #wrap {
-    width: 100%;
-    
+    width: 100%;   
     overflow: hidden;
     color: $text-color;
     background: $bg-color;
-
+    
     .visual {
         position: relative;
         .container {            
@@ -23,16 +22,21 @@
                 background: rgba(0,0,0,0.6);
             }
             h2 {
+                
+                padding: 0 2.5rem;
                 width: 100%;
                 text-align: center;
-                font-size: 16rem;
+                font-size: 8rem;
+                font-weight: 500;
                 position: absolute;  
-                top: 33%;                              
+                top: 25%;
+                                              
                 z-index: 111;
                 span {
+                    display: block;
                     font-family: "Jomolhari", sans-serif;
-                    margin: 0 3rem;
                     font-weight: normal;
+                    
                 }
             }          
         }          
@@ -40,7 +44,7 @@
     
     .scroll {       
         position: absolute;
-        left: calc(50% - 1.1rem);
+        left: calc(50% - 4.4rem);
         bottom: 10%;
         animation: scroll 1.5s 2s infinite ease-in-out;
 
@@ -69,109 +73,83 @@
   }
 /* Slogan */ 
 #section1 {
+   
     width: 100%;
-    height: 100vh;
+    height: 100%;
+    padding: 6rem 0;
     text-align: center;
-    font-size: 8rem;
+    font-size: 3.2rem;
     font-family: "Poppins", sans-serif;     
     overflow: hidden;
     .slogan {        
-        margin-top: 24rem;      
+              
         .s_txt {
-            font-size: 10rem;
+            font-size: 4rem;
             font-family: "Jomolhari", sans-serif;
         }
         .small {
-            font-size: 3rem;
+            font-size: 1rem;
             margin-top: 5rem;
         }
     }
 }
 /* Project */ 
-#section2 {       
-    padding: 0 6rem;
-    article {
-        display: flex;
-        justify-content: space-between;
-        gap: 3rem;
-        
-        div {            
-            width: 50%;           
-        }
-        img {
-            width: 100%;
-            height: 70%;
-        }
+#section2 { 
+          
+    padding: 0 2.5rem 6rem;
+    h3 {
+        margin-left: -2.5rem; 
     }
 }
 /* Artist */ 
 #section3 {
+     
     display:inline-block;
-    .artist_grid {
+    .artist_grid1 {
         display: grid;
         grid-template-columns: 40% 30% 30%;
-        grid-template-rows: 50% 50% ;
+        grid-template-rows: 50% 50%;
         
         a {
             display: inline-block;
             overflow: hidden;
         }
         .grid_box1 {
-            grid-row-start: 1;
-            grid-row-end: 3;
+            grid-column-start: 1;
+            grid-column-end: 4;
+             
         }
         .grid_box2 {
             grid-column-start: 2;
-            grid-column-end: 4;                    
+            grid-column-end: 1;                    
         }
         .grid_box3 {
-            grid-column-start: 2;
-            grid-column-end: 3;
+           
         }
         img {
             transition: all 0.5s ease-in-out;
-               
+            width: 100%;
+             height: 100%;  
             &:hover {
                 transform:scale(1.1);
             }
-        }
-        p {
-            display: none;
-        }        
+        }             
+    }
+    .artist_grid2 {
+        display: none;
     }
 }
 /* Artwork */ 
 #section4 {
     width: 100%;
-    height: 100vh;
+    
     overflow: hidden;
     position: relative;
-
-    .artinner { 
-        position: absolute;
-        top: 23%;
-        left: 0;       
-        .canvas {
-            display: flex;
-            
-            .artwork1,.artwork2 {
-                display: flex;
-                align-items: center;
-                animation: slide 50s linear infinite;
-                .cell {
-                    width: 308px;
-                    height: 362px;
-                    opacity: 0.6;
-                    margin-left: -20px;
-
-                    &:nth-child(even){
-                        width: 402px;
-                        height: 498px;
-                        opacity: 1;
-                    }
-                }
-            }
-        }
+   
+    padding-bottom: 6rem;
+    img {
+        width: 100%;
+        
     }      
 }
 @keyframes slide {
@@ -185,18 +163,19 @@
 /* About */ 
 #section5 {
     width: 100%;
-    height: 130vh;
-    display: inline-block;
-    position: relative;
+    height: 100vh;      
+    position: relative;     
     .marquee_w {
         display:flex;
-        
         .marquee {
+            
+            position: absolute;
+            top: 0;
             display: flex;          
             align-items: center;
-            animation: slide 20s linear infinite;
+            animation: slide 60s linear infinite;
             .slideText {
-                font-size: 30rem;
+                font-size: 20rem;
                 letter-spacing: 1rem;
                 font-family: "Jomolhari", sans-serif;
                 font-weight: 700;
@@ -204,124 +183,306 @@
             }
         }
     }
-    .aboutImg {
-        position: absolute;
-        top: 25%;
-        right: 5%;
-  
-    }
-    .aboutTxt {
-        position: absolute;
-        top:47%;
-        left: 20%;
-        font-size: 2.5rem;
-        .about_p {
-            font-size: 5.4rem;
-        }
-    }
-}
-/* Footer */
-footer {
-    height: 14rem;
-    width: 100%;
-    background: $f-color;
-    color: $text-color;
-    font-size: 1.8rem;
-    font-family: "Poppins", sans-serif;
-    padding: 0 6rem;
-
-    .footer_in {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-
-        .sns_wrap {
-           width: 40rem;          
-            margin-top: 1.5rem;
+    .aTit {
+        position: relative;
+        top: 10rem;
+        margin: auto;
+        width: 92%;
             
-            img {
-                width: 5.4rem;
-                height: 5.4rem;
-                margin-left: 6rem;          
-            } 
-        }
-    }
-} 
-
-
-
-/******** 1420px이하 *********/
-@media (max-width:1420px){
-    article {
-        span {
-            font-size: 3.2rem;
-        }
-        p {
-            font-size: 1.4rem;
-        }
-    }
-    #section1 {
-        font-size: 6rem;
-        .s_txt {
-            font-size: 8rem;            
-        }
-        .small {
-            font-size: 2rem;
-        }
-    }
-}
-/******** 1300px이하 *********/
-@media (max-width:1300px){
-    #section1 {
-        font-size: 5rem;
-        .s_txt {
-            font-size: 7rem;           
-        }
-        .small {
-            font-size: 1.8rem;
-        }
-    }
-}
-/******** 1200px이하 *********/
-@media (max-width:1200px){
-    article {
-        span {
-            font-size: 2.8rem;
-        }
-        p {
-            font-size: 1.2rem;
-        }
-    }
-    #section1 {
-        font-size: 4rem;
-        .s_txt {
-            font-size: 6rem;           
-        }
-        .small {
-            font-size: 1.6rem;
-        }
-    }
-    #section5 {
-        
-        height: 150vh;
-        transition: 0.3s ease-in-out;
         .aboutImg {
-                    
-            top: 20%;
-            left: 20%;            
+            position: absolute;
+            top: 0;            
         }
-        .aboutTxt {
-            top: 65%;
-            left: 27%;
-            b {
-                font-size: 4.2rem;
-                
+        .about_p {
+            font-size: 1.8rem;
+            margin-top: 0.5rem;             
+        }
+        .about_p2 {
+            font-size: 1.2rem;
+            line-height: 1.5;
+                           
+        }
+    }   
+}
+
+/***** 500px이상 *****/
+@media (min-width:500px){
+    #wrap {
+        .visual {
+            .container {
+                h2 {
+                    font-size: 10rem;
+                    span {
+                        display: inline-block;
+                    }  
+                }
             }
-            p {
-                font-size: 1.4rem;
+        }
+
+        #section1 {
+            font-size: 3.8rem;
+            .slogan {
+                .s_txt {
+                    font-size: 5rem;
+                }
+                .small {
+                    font-size: 1.2rem;
+                }
+            }
+        }
+        #section4 {
+            width: 100%;
+            overflow: hidden;
+            position: relative;
+            
+            .artinner {               
+                .canvas {
+                    display: flex;
+                    
+                    
+                    .artwork1,.artwork2 {
+                        display: flex;
+                        align-items: center;
+                        animation: slide 50s linear infinite;
+                        .cell {
+                            width: 308px;
+                            height: 362px;
+                            opacity: 0.6;
+                            margin-left: -20px;
+        
+                            &:nth-child(even){
+                                width: 402px;
+                                height: 498px;
+                                opacity: 1;
+                            }
+                        }
+                    }
+                }
+            }      
+        }
+        @keyframes slide {
+            0%{
+                transform: translateX(0);
+            }
+            100%{
+                transform: translateX(-100%);
+            }
+        }
+        #section5 {       
+            .marquee {
+                top: 2rem;
+            }
+            .aTit {
+                width: 80%;
+                top: 8rem;
+                height: 80%;
+      
+                .aboutTxt {
+                    position: absolute;
+                    bottom: 10%;
+                    .about_p {
+                        font-size: 2.2rem;                     
+                    }
+                    .about_p2 {
+                        font-size: 1.4rem;
+                    }
+                }
+              
+            }
+        }
+        
+    }
+}
+
+/***** 768px이상 *****/
+@media (min-width:768px){
+    #wrap {
+        .visual {
+            .container {
+                h2 {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                font-size: 11rem;
+                position: absolute;  
+                top: 33%;                              
+                z-index: 111;
+                    span {
+                        margin: 0 3rem;
+                    }  
+                }
+            }
+        }
+        
+        #section1 {
+            font-size: 4.2rem;
+            padding: 12rem 0;
+            .slogan {
+                .s_txt {
+                    font-size: 6rem;
+                }
+                .small {
+                    font-size: 1.4rem;
+                }
+            }
+        }
+        #section2 { 
+                  
+            padding: 0 6rem;
+            article {
+                display: flex;
+                justify-content: space-between;
+                gap: 3rem;
+                
+                div {            
+                    width: 50%;          
+                }       
+            }
+        }
+        #section3 {
+            display:inline-block;
+            .artist_grid1{display: none;}
+            .artist_grid2{
+                display: grid;
+                grid-template-columns: 40% 30% 30%;
+                grid-template-rows: 50% 50% ;
+                a {
+                    display: inline-block;
+                    overflow: hidden;
+                }
+                .grid_box1 {
+                    grid-row-start: 1;
+                    grid-row-end: 3;
+                }
+                .grid_box2 {
+                    grid-column-start: 2;
+                    grid-column-end: 4;                    
+                }
+                .grid_box3 {
+                    grid-column-start: 2;
+                    grid-column-end: 3;
+                }
+                img {
+                    transition: all 0.5s ease-in-out;
+                    width: 100%;
+                    height: 100%;
+                       
+                    &:hover {
+                        transform:scale(1.1);
+                    }
+                }
+            }
+           
+        }
+        #section5 {
+            margin-bottom: 40rem;
+            .marquee {
+                top:4rem;
+                .slideText {
+                    font-size: 30rem;
+                }
+            }
+            .aTit {
+                top: 13rem;
+                
+                height: 100%;
+       
+                .aboutTxt {
+                    position: absolute;
+                    bottom: 0;
+                    .about_p {
+                        font-size: 2.4rem;
+                        margin-top: 0.5rem;             
+                    }
+                    .about_p2 {
+                        font-size: 1.6rem;
+                        line-height: 1.5;                                   
+                    }
+                }
                 
             }
         }
     }
 }
+/***** 900px이상 *****/
+@media (min-width:900px){
+    #wrap {
+        .visual {
+            .container {
+                h2 {
+                    font-size: 12rem;  
+                }
+            }
+        }
+    }
+}
+/***** 1040px이상 *****/
+@media (min-width:1040px){
+    #wrap {
+        .visual {
+            .container {
+                h2 {
+                    font-size: 14rem;  
+                }
+            }
+        }
+        #section1 {
+            font-size: 6rem;
+            .slogan {
+                .s_txt {
+                    font-size: 8rem;
+                }
+                .small {
+                    font-size: 1.8rem;
+                }
+            }
+        }
+        #section5 {
+            margin-bottom: 40rem;
+            .marquee {
+                top:6rem;
+                .slideText {
+                    font-size: 30rem;
+                }
+            }
+            .aTit {
+                top: 8rem;
+               
+                height: 100%;
+                .aboutImg {                    
+                    right: 0;                   
+                
+                                 
+                }
+                .aboutTxt {
+                    position: absolute;
+                    top: 30%;
+                    .about_p {
+                        font-size: 4rem;
+                                    
+                    }
+                    .about_p2 {
+                        font-size: 2rem;
+                        line-height: 1.5;                                   
+                    }
+                }
+                
+            }
+        }
+    }
+}
+/***** 1080px이상 *****/
+@media (min-width:1080px){
+    #wrap {
+        .visual {
+            .container {
+                h2 {
+                    font-size: 16rem;  
+                }
+            }
+        }
+    }
+}
+
+
 
